# drift-sdk

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
drift/: __init__.py  client.py  dataset.py  route.py  segment.py  tensorflow.py  torch.py
examples/: drift_train_driving.ipynb
tests/: test_sdk.py
