[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-sdk"
version = "0.1.4"
description = "Tiny Python SDK for the Drift dataset API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Drift Contributors" }
]
keywords = ["drift", "dataset", "pytorch", "tensorflow", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
tensorflow = ["tensorflow>=2.15"]

[project.urls]
Homepage = "https://github.com/JordyKieto/drift-sdk"
Repository = "https://github.com/JordyKieto/drift-sdk"
Issues = "https://github.com/JordyKieto/drift-sdk/issues"

[tool.setuptools]
packages = ["drift"]
